@@ -12,7 +12,7 @@ Balance:
  • Ships/Sea wrecks durability increased ("health" + 100%)
 
 Other:
- • Added option "Resolution" (doesnt always work in fullscreen mode, and might cause freeze)
+ • Added option "Resolution" (might freeze engine, fixed in version 104.0.1.670)
  • Added option "Move Window Position"
  • Added option "Contain mouse inside window"
  • Added options "Camera smoothing" and "Tracking cam smoothing" slider
@@ -24,6 +24,7 @@ Other:
  • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
  • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
  • Added the "Traitor" award = destroying allied units.
+ • Unit stats work again with having unit selected as well (when not in chat input mode)
 
 Fixes:
  • Options widget remembers/restores some spring config settings (switching engines lately made config be reset)
